Basic functionality works

--- a/bar.html
+++ b/bar.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="/style.css"/>
-    <link rel="stylesheet" type="text/css" href="/animate.min.css"/>
-    <script src="ready.js"></script>
-    <script src="messageViewer.js"></script>
-    <script src="message.js"></script>
-    <script src="bar.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link rel="stylesheet" type="text/css" href="animate.min.css"/>
 </head>
 <body style="background-color: yellow;">
     <div id="message-wrapper">
     </div>
+    <script src="bundle.js"></script>
+    <!--<script src="fetcherBundle.js"></script>-->
+    <!--<script src="messageViewer.js"></script>-->
+    <!--<script src="messages.js"></script>-->
+    <!--<script src="bar.js"></script>-->
 </body>
 </html>
