--- a/bar.html
+++ b/bar.html
@@ -7,6 +7,8 @@
 <body style="background-color: yellow;">
     <div id="message-wrapper">
     </div>
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="bower_components/oauth-js/dist/oauth.js"></script>
     <script src="bundle.js"></script>
 </body>
 </html>
